Prevents wrapping of text on filter page.

--- a/scout/static/scout/css/critical.scss
+++ b/scout/static/scout/css/critical.scss
@@ -227,7 +227,7 @@ h1 {
             fieldset { border: none; padding: 0; margin:0;  margin-bottom: 20px; float: left; width: 50%;
                 legend { font-family: 'Raleway', sans-serif; font-weight: 700; font-size: 12px; text-transform: uppercase; margin-bottom: 8px; color: #bbb; padding: 5px 0; letter-spacing: 1px; }
             }
-            label { display: block; line-height: 25px; font-size: 14px;
+            label { display: block; line-height: 25px; font-size: 14px; white-space: nowrap;
                 input[type="checkbox"]  { margin-right: 5px; }
 
             }
